<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:id="@+id/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:gravity="center">

    	<LinearLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="0dip"
    	    android:layout_weight="37"
    	    android:gravity="center"
    	    android:orientation="horizontal"
    	     >

    	    <LinearLayout 
    	        android:gravity="center"
    	        android:layout_weight="22"
    	        android:layout_width="0dip"
    	        android:layout_height="match_parent"
    	        android:orientation="vertical">
    		<Button
    	    	android:id="@+id/button1minus_player1"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:text="@string/button1minus"
    	    	style="@style/CounterButton"
    	    />   
        	<Button
    	    	android:id="@+id/button5minus_player1"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:text="@string/button5minus"
    	    	style="@style/CounterButton"
    	    />
    		</LinearLayout>

    		<TextView
    		    android:id="@+id/player1"
    		    style="@style/LifeCounter"
    		    android:layout_width="0dp"
    		    android:layout_height="wrap_content"
    		    android:layout_weight="56"
    		    android:gravity="center"
    		    android:text="@string/default_life" />

    		<LinearLayout
    		    android:layout_weight="22"
    		    android:gravity="center"
    		    android:layout_width="0dip"
    		    android:layout_height="match_parent"
    		    android:orientation="vertical"
    		    >
    		    <Button
    	   		android:id="@+id/button1plus_player1"
    	    	android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/button1plus"
	    		style="@style/CounterButton"
	    		/>
       		<Button
    		    android:id="@+id/button5plus_player1"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/button5plus"
				style="@style/CounterButton" 
				/>
   	    	</LinearLayout>   
    	</LinearLayout>

   	<LinearLayout
   	    android:layout_width="fill_parent"
   	    android:layout_height="0dip"
   	    android:layout_weight="37"
   	    android:gravity="center"
   	    android:orientation="horizontal" >

    	    <LinearLayout 
    	        android:gravity="center"
    	        android:layout_weight="22"
    	        android:layout_width="0dip"
    	        android:layout_height="match_parent"
    	        android:orientation="vertical">
			<Button
    	    	android:id="@+id/button1minus_player2"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:text="@string/button1minus"
    	    	style="@style/CounterButton"
    	    />   
        	<Button
    	    	android:id="@+id/button5minus_player2"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:text="@string/button5minus"
    	    	style="@style/CounterButton"
    	    />
    		
    		</LinearLayout>

    		<TextView
    		    android:id="@+id/player2"
    		    style="@style/LifeCounter"
    		    android:layout_weight="56"
    		    android:layout_width="0dip"
    		    android:layout_height="wrap_content"
    		    android:text="@string/default_life"
    		    android:gravity="center" />

    		<LinearLayout
    		    android:gravity="center"
    		    android:layout_width="0dip"
    		    android:layout_weight="22"
    		    android:layout_height="match_parent"
    		    android:orientation="vertical"
    		    >
       		<Button
    		    android:id="@+id/button1plus_player2"
    		    style="@style/CounterButton"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/button1plus" />

       		<Button
    		    android:id="@+id/button5plus_player2"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/button5plus"
				style="@style/CounterButton" 
				/>
   	    	</LinearLayout> 

    	</LinearLayout>
    	    
   	    		<LinearLayout
   	    		       	    android:id="@+id/log"
   	    		    
	    android:layout_height="0dip"
	    android:layout_width="fill_parent"
	    android:layout_weight="26"
	    android:orientation="vertical">
   			<LinearLayout
   		    	android:layout_height="wrap_content"
   		    	android:layout_width="wrap_content"
   		    	android:orientation="horizontal"
   		    	>

   		    		<TextView
   		    		    style="@style/logS"
   		    		    android:layout_width="wrap_content"
   		    		    android:layout_height="wrap_content"
   		    		    android:text="@string/player1"
   		    		    android:layout_marginRight="20dp"
   		    		     />
   		    
	    			<TextView 
	        		android:id="@+id/p1log"
	        		android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
	        		style="@style/logS"
	        		android:text="@string/default_life"
	        		/>
	    	</LinearLayout>
   			<LinearLayout
   		    	android:layout_height="wrap_content"
   		    	android:layout_width="wrap_content"
   		    	android:orientation="horizontal"
   		    	>
	    			<TextView
   		    		android:layout_width="wrap_content"
   		    		android:layout_height="wrap_content"
   		    		android:text="@string/player2"
   		    		style="@style/logS"
   		    		android:layout_marginRight="20dp"
   		    	/>
	     			<TextView 
	        		android:id="@+id/p2log"
	        		android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
	        		android:text="@string/default_life"
	        		style="@style/logS"
	        />
	     </LinearLayout>
	</LinearLayout>  
</LinearLayout>
